Sentry fixes (#111)
- Manually log errors at main backend entry points. This includes graphql errors which were previously not being reported
- Stop reporting unhandled zod errors
- Add user/event context to FE/BE errors
- Add details on setting up db analytics to README